Step 3.5: Saved example.qmd changes in testbranch before switching

--- a/example.qmd
+++ b/example.qmd
@@ -5,13 +5,13 @@ format: html
 editor: visual
 ---
 
-## Introduction: 
+## Introduction:
 
 This Quarto document will demonstrate how to use Git and GitHub for version control and reproducible workflows.
 
 ### Step 3:
 
-#### Branches in Git let us work on changes without touching the main version of the project.  This is helpful when we want to test, edit, or build features separately.
+#### Branches in Git let us work on changes without touching the main version of the project. This is helpful when we want to test, edit, or build features separately.
 
 #### Step 3.1: Create and Switch to a New Branch
 
@@ -27,9 +27,10 @@ In the terminal, I ran:
 
 3.  We can also do this in two separate steps
 
-    1.   First, create the branch:
-
+    1.  First, create the branch:
         1.  git branch testbranch
+
+    <!-- -->
 
     2.  Then, switch to it:
 
@@ -37,7 +38,7 @@ In the terminal, I ran:
 
 4.  Both approaches work the same — but using git switch -c is quicker.
 
-#### Step 3.2:  Modify example.qmd and Commit the Changes
+#### Step 3.2: Modify example.qmd and Commit the Changes
 
 In this step, we’ll make a small change to the example.qmd file inside the testbranch.
 
@@ -50,3 +51,5 @@ Then I ran the following commands in the terminal:
 -   git add example.qmd
 
 -   git commit -m "Step 3.2: Added line to example.qmd in testbranch"
+
+Completed the 3 step completely:
