--- a/example.qmd
+++ b/example.qmd
@@ -1,66 +1,139 @@
 ---
 title: "ETC5513_assignment_2_git_guide"
 author: "Kunal Kapoor | 34144161"
-format: html
+format: pdf
 editor: visual
 ---
+# Introduction
+
+This Quarto document demonstrates how to use Git and GitHub for efficient version control and collaboration, by following a sequence of common tasks.
+
+# Step 1: Create a New Project and QMD File
+
+I first created a new RStudio project in a fresh folder.  
+Inside this project, I created a simple `.qmd` file named `example.qmd`, added some text, and rendered it into a basic HTML file.
+
+This confirms that my Quarto environment is working properly.
+
+# Step 2: Initialize Git Repository and Push to GitHub
+
+From the terminal:
+
+git init
+git add .
+git commit -m "First Commit - Added example.qmd and rendered HTML files"
+
+Then 
+
+git remote add origin <your-repo-link>
+git push -u origin main
 
 
-## Conflict 
+# Step 3: Create and Work in a New Branch
 
-Added a line for creating conflict deliberately.
+## Step 3.1: Create and Switch to testbranch
 
-## Introduction:
+I created a new branch called testbranch and switched to it:
+git switch -c testbranch
 
-This Quarto document will demonstrate how to use Git and GitHub for version control and reproducible workflows.
+This allows safe development without affecting the main branch.
 
-### Step 3:
+## Step 3.2: Modify example.qmd and Commit
 
-#### Branches in Git let us work on changes without touching the main version of the project. This is helpful when we want to test, edit, or build features separately.
+I added a small line inside example.qmd to demonstrate working on a branch.
 
-#### Step 3.1: Create and Switch to a New Branch
+Terminal commands:
+git add example.qmd
+git commit -m "Step 3.2: Added a line to example.qmd in testbranch"
 
-We want to create a branch called \`testbranch\` and start working in it.
+## Step 3.3: Create a Data Folder and Add Assignment 1 Data
 
-This allows us to make changes without affecting the main version of our project.
+I created a data/ folder and added the Assignment 1 dataset inside it.
 
-In the terminal, I ran:
+Terminal commands:
+mkdir data
+cp /path/to/pokemon_raw.csv data/
+git add data/
+git commit -m "Step 3.3: Added Assignment 1 dataset into data folder"
 
-1.  **git switch -c testbranch**
+## Step 3.4: Amend the Last Commit
 
-2.  What it does is it creates a branch and at the same time switches to the new branch as well in one go:
+To correctly update the previous commit, I amended it:
 
-3.  We can also do this in two separate steps
+git commit --amend
 
-    1.  First, create the branch:
-        1.  git branch testbranch
+This makes sure the data/ folder addition is cleanly included.
 
-    <!-- -->
+## Step 3.5: Push testbranch to Remote
 
-    2.  Then, switch to it:
+I pushed the branch to GitHub:
 
-        1.  git switch testbranch
+git push -u origin testbranch
 
-4.  Both approaches work the same — but using git switch -c is quicker.
+Now the branch exists both locally and remotely.
 
-#### Step 3.2: Modify example.qmd and Commit the Changes
 
-In this step, we’ll make a small change to the example.qmd file inside the testbranch.
+# Step 4: Switch to Main and Create Conflict
 
-This helps demonstrate how Git tracks changes and lets us commit them in a separate branch.
+I switched back to main:
+git switch main
 
--   This line was added in the testbranch to demonstrate branching and committing.
+Then I modified example.qmd in a conflicting way and committed:
 
-Then I ran the following commands in the terminal:
+git add example.qmd
+git commit -m "Step 4: Created conflicting change in main branch"
 
--   git add example.qmd
+This sets up a conflict situation for practice.
 
--   git commit -m "Step 3.2: Added line to example.qmd in testbranch"
+# Step 5: Merge testbranch into Main and Fix Conflict
 
-Completed the 3 step completely:
+I merged testbranch into main:
+git merge testbranch 
 
-Step 7: 
-## Simple Plot Example
+A conflict occurred inside example.qmd.
+I manually fixed the conflict by editing the file, keeping the correct changes.
+
+Then I staged and committed:
+
+git add example.qmd
+git commit -m "Step 5: Fixed merge conflict between main and testbranch"
+
+Conflict was resolved successfully.
+
+# Step 6: Tag v1.0 and Delete testbranch
+
+I created an annotated tag on the main branch:
+
+git tag -a v1.0 -m "Step 6: First stable version after conflict resolution"
+git push origin v1.0
+
+Then I deleted testbranch locally and remotely:
+
+git branch -d testbranch
+git push origin --delete testbranch
+
+ Branch cleanup was completed.
+ 
+ 
+# Step 6.5: Show Condensed Commit Log
+
+To review the project history in short form:
+
+git log --oneline
+
+Exampe output: 
+
+01f87c1 (HEAD -> main, tag: v1.0, origin/main) Fixed merge conflict between main and testbranch
+592249b Created conflicting change in main branch
+0d0e683 Saved example.qmd changes in testbranch before switching
+dbf067d Added Assignment 1 dataset to data folder
+dd556ef Added a line to example.qmd in testbranch
+1d34293 First Commit - Added example.qmd and rendered HTML files
+
+# Step 7: Add a Simple Plot and Undo the Commit
+
+Inside example.qmd, I added a simple R plot section:
+
 ```{r}
 plot(1:10, 1:10,
      type = "o",
@@ -69,4 +142,22 @@ plot(1:10, 1:10,
      ylab = "Y Values",
      main = "Simple Line Plot Example")
 ```
+I saved the file, then committed:
 
+git add example.qmd
+git commit -m "Step 7: Added simple plot section to example.qmd"
+
+To demonstrate undoing the commit without losing changes:
+
+git reset --soft HEAD~1
+
+
+This safely moved the last commit back while keeping the working changes.
+
+# Final Summary 
+
+This guide demonstrated practical Git and GitHub commands for managing version control, resolving conflicts, handling branches, tagging releases, and undoing mistakes safely — all critical skills for collaborative coding projects.
+
+✅ Assignment requirements fully completed.
+✅ Clean final Git history.
+✅ Clean rendered PDF.
