Final changes and addition of Monash template

--- a/Monash_template/_extensions/quarto-monash/wp/title.tex
+++ b/Monash_template/_extensions/quarto-monash/wp/title.tex
@@ -59,7 +59,7 @@ $endif$
         \end{textblock}
         \vspace*{2.5cm}
         \begin{center}\Large
-        Department of Econometrics and Business Statistics\\[.5cm]
+        Department of Econometrics\\[.5cm]
         \end{center}\vspace{2cm}
         \begin{center}
         \fbox{\parbox{14cm}{\begin{onehalfspace}\centering\Huge\vspace*{0.3cm}
