--- a/example.qmd
+++ b/example.qmd
@@ -111,12 +111,33 @@ Exampe output:
 Inside example.qmd, I added a simple R plot section:
 
 ```{r}
-plot(1:10, 1:10,
-     type = "o",
-     col = "blue",
-     xlab = "X Values",
-     ylab = "Y Values",
-     main = "Simple Line Plot Example")
+library(ggplot2)
+
+# Data (emoji-free)
+df <- data.frame(
+  command = c("git init", "git status", "git add", "git commit", 
+              "git push", "git pull", "git merge", "merge conflict", 
+              "git reset --hard", "git rebase", "force push"),
+  panic = c(0, 1, 2, 2, 4, 5, 6, 9, 10, 8, 11)
+)
+
+# Order commands by panic
+df$command <- factor(df$command, levels = df$command[order(df$panic)])
+
+# Plot (horizontal, LaTeX-safe)
+ggplot(df, aes(x = panic, y = command, fill = panic)) +
+  geom_col(width = 0.6) +
+  geom_text(aes(label = panic), hjust = -0.3, size = 4.2) +
+  scale_fill_gradient(low = "skyblue", high = "red") +
+  labs(title = "Panic Levels of Common Git Commands",
+       x = "Panic Level (0–11)", y = "") +
+  theme_minimal(base_size = 13) +
+  theme(
+    legend.position = "none",
+    plot.title = element_text(face = "bold", size = 15),
+    axis.text.y = element_text(face = "bold")
+  ) +
+  xlim(0, 13)
 ```
 
 I saved the file, then committed:
